--- a/bloc.html
+++ b/bloc.html
@@ -94,6 +94,12 @@
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <img src="pc.jpg" class="rounded-circle" alt="Eniun">
-    <h1>h1 core i7 <small>La arquitectura híbrida de desempeño combina dos microarquitecturas de núcleo, Performance-cores (P-cores) y Efficient-cores (E-cores), en un solo chip de procesador que se incorporaron por primera vez en los procesadores Intel® Core™ de 12ᵃ Generación. Ciertos procesadores Intel® Core™ de 13ᵃ Generación no cuentan con la arquitectura híbrida de desempeño, solo tienen P-cores y el mismo tamaño de caché que la generación anterior; consulte ark.intel.com para obtener información sobre las SKUs.</small></h1>
-  </body>
+    <h1>h1 core i3 <small>La arquitectura híbrida de desempeño combina dos microarquitecturas de núcleo, Performance-cores (P-cores) y Efficient-cores (E-cores), en un solo chip de procesador que se incorporaron por primera vez en los procesadores Intel® Core™ de 12ᵃ Generación. Ciertos procesadores Intel® Core™ de 13ᵃ Generación no cuentan con la arquitectura híbrida de desempeño, solo tienen P-cores y el mismo tamaño de caché que la generación anterior; consulte ark.intel.com para obtener información sobre las SKUs.</small></h1>
+  
+    <img src="pc1.jpg" class="rounded-circle" alt="Eniun">
+    <h1>h1 core i5 <small>Combina dos microarquitecturas de núcleo, Performance-cores (P-cores) y Efficient-cores (E-cores), en un solo chip de procesador que se incorporaron por primera vez en los procesadores Intel® Core™ de 12ᵃ Generación. Ciertos procesadores Intel® Core™ de 13ᵃ Generación no cuentan con la arquitectura híbrida de desempeño, solo tienen P-cores y el mismo tamaño de caché que la generación anterior; consulte ark.intel.com para obtener información sobre las SKUs.</small></h1>
+ 
+    <img src="pc2.jpg" class="rounded-circle" alt="Eniun">
+    <h1>h1 core i7 <small>Híbrida de desempeño combina dos microarquitecturas de núcleo, Performance-cores (P-cores) y Efficient-cores (E-cores), en un solo chip de procesador que se incorporaron por primera vez en los procesadores Intel® Core™ de 12ᵃ Generación. Ciertos procesadores Intel® Core™ de 13ᵃ Generación no cuentan con la arquitectura híbrida de desempeño, solo tienen P-cores y el mismo tamaño de caché que la generación anterior; consulte ark.intel.com para obtener información sobre las SKUs.</small></h1>
+ </body>
 </html>
