--- a/contactos.html
+++ b/contactos.html
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img/slider1.png" class="d-block w-100" alt="...">
+      <img src="img/slider1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>PRESIDENTE</h5>
         <p>
