Modificado el INDEX

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row g-5">
         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s"
           style="visibility: visible; animation-delay: 0.5s; animation-name: fadeIn;">
-          <h1 class="text-uppercase mb-4">Reparación & Soporte Total a
+          <h1 class="text-uppercase mb-4">Reparación  Soporte Total a
             Windows/Linux/Mac.</h1>
           <p>Nuestro discreto servicio de reparación de computadoras y laptops ofrece la más alta calidad para todos
             nuestros clientes.</p>
