Modificado la imangen El relay

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="section micar">
     <div class="fondo"></div>
     <div class="contenedor">
-      <div class="contenidos">
+      <div class="contenidos wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
         <div class="cajas">
           <div class="titulo  text-primary ">LA IMPORTANCIA DE UN BUEN SOPORTE TECNICO</div>
           <p class="parrafo">
@@ -133,7 +133,7 @@
             <h3 class="text-uppercase mb-3">Reparacion de hardware</h3>
             <p>Actualización de computadoras, reemplazo de discos, expansión de memoria RAM, cambio de display,
               cargadores o eliminadores de corriente entre otros</p>
-            <span class="text-uppercase text-primary">From $15</span>
+            <span class="text-uppercase text-primary">Costo Bs 300</span>
           </div>
           <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
         </div>
