Bloc Agregsdo imagen

--- a/bloc.html
+++ b/bloc.html
@@ -57,7 +57,9 @@
             <h1 class="d-inline-block py-1 px-4" style = "font-family:optima;" style="color: hsl(240, 14%, 99%);">BLOG<br>GRUPO DIEZ</h1>
           </div>
         </div>
-     <main class="container">
+        </div>
+        </div>
+ <main class="container">
   <div class="container container-xxl py-5 wow animated bounceInLeft box2" data-wow-delay="0.8s">
     <div class="row mb-2">
     <div class="col-md-6">
