--- a/quinessomos.html
+++ b/quinessomos.html
@@ -175,7 +175,7 @@
               <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
                   <div class="team-item">
                       <div class="team-img position-relative overflow-hidden">
-                          <img class="img-fluid" src="img/edy.png" alt="">
+                          <img class="img-fluid" src="img/112.jpeg" alt="">
                           <div class="team-social">
                             <a class="btn btn-square" href=""><i class="fa fa-facebook-f"></i></a>
                             <a class="btn btn-square" href=""><i class="fa fa-twitter"></i></a>
@@ -183,7 +183,7 @@
                           </div>
                       </div>
                       <div class="bg-secondary text-center p-4">
-                          <h5 class="text-uppercase">NIEL LIMBERTH SARZURI</h5>
+                          <h5 class="text-uppercase">NIELS LIMBERTH SARZURI</h5>
                           <span class="text-primary">OWNER</span>
                       </div>
                   </div>
