--- a/contactos.html
+++ b/contactos.html
@@ -69,7 +69,7 @@
               <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
                   <div class="bg-secondary p-5">
                       
-                      <h1 class="text-uppercase mb-4 text-primary">Si tienes alguna consulta llamnos</h1>
+                      <h1 class="text-uppercase mb-4 text-primary">Si tienes alguna consulta llamanos</h1>
                       <p class="mb-4">Nuestro discreto servicio de reparación de computadoras y laptops ofrece la más alta calidad para todos no dudes en contactarnos</p>
                       <form>
                           <div class="row g-3">
@@ -89,7 +89,7 @@
                               <div class="col-12">
                                   <div class="form-floating">
                                       <textarea class="form-control bg-transparent" placeholder="Ingrese su mensage" id="message" style="height: 100px"></textarea>
-                                      <label for="message">Mensage</label>
+                                      <label for="message">Mensaje</label>
                                   </div>
                               </div>
                               <div class="col-12">
@@ -108,6 +108,19 @@
               </div>
           </div>
       </div>
+  </div>
+  <div class="section  ba">
+    <div class="fondo"></div>
+    <div class="contenedor">
+      <div class="contenidos">
+        <div class="cajas m wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <h1 class="d-inline-block py-1 px-4" style="color: #6C7293;">Nuestra misión es brindar<br> soluciones eficaces y veraz de mucha calidad para el cliente
+          </h1>
+          
+        </div>
+
+      </div>
+    </div>
   </div>
 
 
