--- a/servicios.html
+++ b/servicios.html
@@ -39,7 +39,7 @@
               <a class="nav-link active" aria-current="page" href="servicios.html"><i class="fa fa-windows"></i>       Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="bloc.html"><i class="fa fa-globe"></i>       Bloc</a>
+              <a class="nav-link" href="bloc.html"><i class="fa fa-globe"></i>       Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contactos.html"><i class="fa fa-phone"></i>       Contactos</a>
@@ -78,7 +78,7 @@
               <h3 class="text-uppercase mb-3">Reparacion de hardware</h3>
               <p>Actualización de computadoras, reemplazo de discos, expansión de memoria RAM, cambio de display,
                 cargadores o eliminadores de corriente entre otros</p>
-              <span class="text-uppercase text-primary">From $15</span>
+              <span class="text-uppercase text-primary">Precio Bs 15</span>
             </div>
             <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
           </div>
