--- a/servicios.html
+++ b/servicios.html
@@ -92,7 +92,7 @@
             <div class="ps-4">
               <h3 class="text-uppercase mb-3">Viruz y Spiware</h3>
               <p>Amenazas en línea, virus, hackers! ¿Preocupado por la Seguridad?</p>
-              <span class="text-uppercase text-primary">Costo Bs 500</span>
+              <span class="text-uppercase text-primary">Costo. Bs 500</span>
             </div>
             <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
           </div>
