--- a/bloc.html
+++ b/bloc.html
@@ -167,8 +167,8 @@
           <thead>
             <tr>
               <th>Nombre</th>
-              <th>votos a favor</th>
-              <th>Votos negativos</th>
+              <th>Votos a favor</th>
+              <th>Votos Negativos</th>
             </tr>
           </thead>
           <tbody>
