--- a/eddy/bloc.html
+++ b/eddy/bloc.html
@@ -69,7 +69,7 @@
           <h3 class="mb-0"style = "font-family:perpetua;">Publicación destacada</h3>
           <div class="mb-1 text-muted">Marzo 2023</div>
           <p class="card-text mb-auto">Esta es una tarjeta más amplia con texto de apoyo a continuación como una introducción natural a contenido adicional.</p>
-          <a href="#" class="stretched-link">sigue leyendo</a>
+          <a href="#" class="stretched-link">Sigue leyendo</a>
         </div>
         <div class="col-auto d-none d-lg-block">
         </div>
