--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="barretocss/style.css">
 </head>
 
 <body>
