--- a/servicios.html
+++ b/servicios.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-   
+  <!--<link rel="stylesheet" href="css/style.css">-->
+  <link rel="stylesheet" href="css-servicios/style.css">
 
   </head>
   <body>
