--- a/servicios.html
+++ b/servicios.html
@@ -78,7 +78,7 @@
               <h3 class="text-uppercase mb-3">Reparacion de hardware</h3>
               <p>Actualización de computadoras, reemplazo de discos, expansión de memoria RAM, cambio de display,
                 cargadores o eliminadores de corriente entre otros</p>
-              <span class="text-uppercase text-primary">COSTO Bs. 15</span>
+              <span class="text-uppercase text-primary">COSTO Bs.. 15</span>
             </div>
             <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
           </div>
