--- a/servicios.html
+++ b/servicios.html
@@ -68,7 +68,7 @@
         <h1 class="text-uppercase">SERVICIOS</h1>
       </div>
       <div class="row" data-masonry='{"percentPosition": true }'>
-        <div class="col-sm-6 col-lg-4 mb-4 ">
+        <div class="col-sm-6 col-lg-4 mb-4 serv">
           <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0 wow fadeInUp">
             <div class="bg-dark d-flex flex-shrink-0 align-items-center justify-content-center"
               style="width: 60px; height: 60px;">
