--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
         </div>
       </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="col-sm-6 col-lg-4 mb-4 barretos">
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0 wow fadeInUp">
           <div class="bg-dark d-flex flex-shrink-0 align-items-center justify-content-center"
             style="width: 60px; height: 60px;">
@@ -152,7 +152,7 @@
           <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
         </div>
       </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="col-sm-6 col-lg-4 mb-4 barretos">
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0 wow fadeInUp">
           <div class="bg-dark d-flex flex-shrink-0 align-items-center justify-content-center"
             style="width: 60px; height: 60px;">
@@ -166,7 +166,7 @@
           <a class="btn btn-square" href=""><i class="fa fa-plus text-primary"></i></a>
         </div>
       </div>
-      <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="col-sm-6 col-lg-4 mb-4 barretos">
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0 wow fadeInUp">
           <div class="bg-dark d-flex flex-shrink-0 align-items-center justify-content-center"
             style="width: 60px; height: 60px;">
