--- a/eddy/bloc.html
+++ b/eddy/bloc.html
@@ -118,7 +118,7 @@
           <li>Segundo elemento de la lista con una descripción más larga</li>
           <li>Tercer elemento de la lista para cerrarlo</li>
         </ul>
-        <p>Y esta es una lista ordenada:</p>
+        <p>Y esta es una lista ordenad:</p>
         <ol>
           <li>Primer elemento de la lista</li>
           <li>Segundo elemento de la lista con una descripción más larga</li>
