--- a/quinessomos.html
+++ b/quinessomos.html
@@ -132,7 +132,7 @@
     <div class="container-xxl py-5">
       <div class="container">
           <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-              <h1 class="text-uppercase">GRUPO DE TRABAJO</h1>
+              <h1 class="text-uppercase">GRUPO DE TRABAJO 10 </h1>
           </div>
           <div class="row g-3 text-center justify-content-center">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
