--- a/contactos.html
+++ b/contactos.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="barretocss/contactosniels.css">
    
 
   </head>
@@ -36,7 +36,7 @@
               <a class="nav-link" href="quinessomos.html"><i class="fa fa-users"></i>       Quines Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link "  href="servicios.html"><i class="fa fa-windows"></i>       Servicios</a>
+              <a class="niels nav-link "  href="servicios.html"><i class="fa fa-windows"></i>       Servicios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="bloc.html"><i class="fa fa-globe"></i>       Bloc</a>
@@ -66,10 +66,10 @@
     <div class="container-xxl py-5">
       <div class="container">
           <div class="row g-0">
-              <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
-                  <div class="bg-secondary p-5">
+              <div class="col-lg-6 wow fadeIn " data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+                  <div class="niels p-5">
                       
-                      <h1 class="text-uppercase mb-4 text-primary">Si tienes alguna consulta llamanos</h1>
+                      <h1 class=" niels text-uppercase mb-4 text-primary">Si tienes alguna consulta llamanos</h1>
                       <p class="mb-4">Nuestro discreto servicio de reparación de computadoras y laptops ofrece la más alta calidad para todos no dudes en contactarnos</p>
                       <form>
                           <div class="row g-3">
@@ -129,7 +129,7 @@
     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
     <div class="container py-5">
       <div class="row g-5">
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 ">
           <h4 class="text-uppercase mb-4">Conectate con nosotros</h4>
           <div class="d-flex align-items-center mb-2">
             <div class="btn-square bg-dark flex-shrink-0 me-3">
@@ -150,14 +150,14 @@
             <span>sistemDiez@gmail.com</span>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 ">
           <h4 class="text-uppercase mb-4">SYSTEM DIEZ</h4>
           <a class="btn btn-link" href=""><i class="fa fa-arrow-right"></i> Quines somos</a>
           <a class="btn btn-link" href=""><i class="fa fa-arrow-right"></i>Servicios</a>
           <a class="btn btn-link" href=""><i class="fa fa-arrow-right"></i>Blogs</a>
           <a class="btn btn-link" href=""><i class="fa fa-arrow-right"></i>Contactos</a>
         </div>
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 ">
           <h4 class="text-uppercase mb-4">SOLICITAR PRESUPUESTO GRATUITO</h4>
           <div class="position-relative mb-4">
             <input class="form-control  w-100 py-3 ps-4 pe-5" type="text" placeholder="Ingresa tu solicitud" style="background-color: transparent; border: none;  border-bottom: solid 1px #6C7293">
