--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="barretocss/style.css">
+  <link rel="stylesheet" href="trifoncss/style.css">
 </head>
 
 <body>
   <nav class="navbar sticky-top navbar-expand-lg navbar-secondary bg-dark wow fadeIn shadow-sm" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn; top: 0px;">
     <div class="container">
-      <a class="navbar-brand text-primary" href="index.html"> <img src="img/ss.png" alt="" width="24" height="24"
+      <a class="navbar-brand text-primary" href="index.html"> <img src="img/ss.png" alt="" width="34" 
           class="d-inline-block ">
         SystemDiez</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -252,6 +252,9 @@
       <div class="contenidos">
 
         <div class="cajas">
+          <div class="titulo  text-primary">
+            <h2 class="huno text-primary">Errores de sus de pc</h2>
+         </div>
           <div class="titulo  text-primary">Errores de sus de pc</div>
           <p class="parrafo">
             La mayoría de personas dañan los sistemas o la información que tienen sus computadores, por no tener
