--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
     <div class="contenedor">
       <div class="contenidos wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
         <div class="cajas">
-          <div class="titulo  text-primary ">LA IMPORTANCIA DE UN BUEN SOPORTE TECNICO</div>
+          <div class="titulo  text-primary">
+            <h2 class="huno text-primary">LA IMPORTANCIA DE UN BUEN SOPORTE TECNICO</h2>
+         </div>
+          
           <p class="parrafo">
             En la actualidad, el sistema informático de las empresas se ha convertido en una de las herramientas más
             críticas en sus procesos productivos, en Soporte Informático Ofrecemos un servicio de mantenimiento y
@@ -255,7 +258,7 @@
           <div class="titulo  text-primary">
             <h2 class="huno text-primary">Errores de sus de pc</h2>
          </div>
-          <div class="titulo  text-primary">Errores de sus de pc</div>
+          
           <p class="parrafo">
             La mayoría de personas dañan los sistemas o la información que tienen sus computadores, por no tener
             instalado y configurado correctamente un antivirus que solvente sus necesidades, sufriendo ataques que dañan
